--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <section>
         <article>
             <div>
-                Github Overview
+                Github
             </div>
         </article>
     </section>
